js fixed, z-indexing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,9 @@ button{
 .top-bar{
 	background: #FAFBFC;
 	box-shadow: 0px 5px 30px rgba(206, 218, 228, 0.6);
+	height: 90px;
+    display: flex;
+    align-items: center;
 }
 .header .logo{
 	margin-left: 10px;
@@ -1465,7 +1468,7 @@ button{
 	margin-bottom: 22px;
 }
 .review-card__text{
-	font-family: Proxima Nova;
+	font-family: ProximaNova;
 	font-weight: 400;
 	font-size: 15px;
 	line-height: 155%;
@@ -1488,8 +1491,8 @@ button{
     margin-left: -81px;
     margin-right: 40px;
 }
-.review-card__img::after{
-	content: '';
+.review-card__img a{
+	display: block;
 	width: 36px;
 	height: 36px;
 	background: #fff url('../img/instagram-blue.png') no-repeat center;
@@ -1511,6 +1514,7 @@ button{
 	position: fixed;
 	top: 0;
 	background: rgba(0, 0, 0, 0.3);
+	z-index: 3;
 }
 .order-call__form{
 	max-width: 600px;
@@ -1530,7 +1534,7 @@ button{
 	margin-bottom: 15px;
 }
 .order-call__desc{
-	font-family: Proxima Nova;
+	font-family: ProximaNova;
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 130%;	
@@ -1538,7 +1542,7 @@ button{
 }
 .order-call__form label{
 	display: block;
-	font-family: Proxima Nova;
+	font-family: ProximaNova;
 	font-weight: 700;
 	line-height: 130%;	
 }
